adding the new page and extension point
